# orange_assistant

./: .env.example  .gitignore  Cargo.toml  PROJECT.md  README.md
database/backend_database/: mbti.sql  tianjin.sql  users.sql
database/frontend_database/: 一分一段表.sql
docs/: ARCHITECTURE.md  PROJECT_CONTENTS.md  TEAMWORK.md
scripts/: check.ps1  start-backend.ps1  start-frontend.ps1
src/: auth.rs  config.rs  error.rs  frontend.rs  knowledge.rs  llm.rs  main.rs  mbti.rs  models.rs  portfolio.rs  recommendation.rs  routes.rs
